tests/fixtures/invalid/list_mod_bool.py
# Cannot modulo List[int] and Bool
x: list[int] = [1, 2, 3] % True
